--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="Jake Lim" />
-    <title>JetForge</title>
+    <title>Durian Party</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <style>
@@ -86,17 +86,17 @@
     </main>
     <div class="container pt-4">
       <footer class="d-flex flex-wrap justify-content-center align-items-center pt-5 border-top">
-        <p class="text-muted">Developed by ST Engineering</p>
+        <p class="text-muted">Developed by {{ INFO_COMPANY_NAME }}</p>
       </footer>
       <footer class="d-flex flex-wrap justify-content-center align-items-center">
-        <p class="text-muted">Brought to you by Durian Party Organistion Committee</p>
+        <p class="text-muted">Brought to you by {{ INFO_COMPANY_COMMITTEE }}</p>
       </footer>
       <footer class="d-flex flex-wrap justify-content-center align-items-center">
-        <p class="text-muted">Engines Transformation Dept &copy; 2025</p>
+        <p class="text-muted">{{ INFO_COMPANY_DEPARTMENT }} &copy; 2025</p>
       </footer>
       <footer class="d-flex flex-wrap justify-content-center align-items-center pb-5">
         <p class="text-muted">
-          <i>{{ appVersion }}</i>
+          <i>{{ APP_VERSION }}</i>
         </p>
       </footer>
     </div>
