--- a/main/templates/landingpage.html
+++ b/main/templates/landingpage.html
@@ -37,27 +37,43 @@
 
   <div class="p-5 mb-4 bg-light rounded-3">
     <div class="container-fluid py-5">
-      <h1 class="display-5 fw-bold">Big app 2</h1>
-      <p class="col-md-8 text-justify">Bigger application</p>
+      <h1 class="display-5 fw-bold">Bingo Game</h1>
+      <p class="col-md-8 text-justify">Get ready to daub! Join the fun and test your luck with our exciting online Bingo game.</p>
+      <p class="col-md-8 text-justify">Click "Access" to start playing now!</p>
       <form action="">
         <input class="btn btn-primary btn-lg" type="submit" value="Access" />
       </form>
     </div>
   </div>
+
+  <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">Durian Obstacle Course</h1>
+      <p class="col-md-8 text-justify">Think you can handle the spikes? Navigate tricky paths, dodge perilous durians, and race to the finish line in this thrilling obstacle course!</p>
+      <p class="col-md-8 text-justify">Click "Access" to prove your agility!</p>
+      <form action="">
+        <input class="btn btn-primary btn-lg" type="submit" value="Access" />
+      </form>
+    </div>
+  </div>
+
+  <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">Know-Your-Durian</h1>
+      <p class="col-md-8 text-justify">From Mao Shan Wang to D24, an expert or just curious? Test your knowledge, learn fascinating facts, and discover the rich world of durians. Become a true connoisseur!</p>
+      <p class="col-md-8 text-justify">Click "Access" for the ultimate knowledge test!</p>
+      <form action="">
+        <input class="btn btn-primary btn-lg" type="submit" value="Access" />
+      </form>
+    </div>
+  </div>
+
   <div class="row align-items-md-stretch">
     <div class="col-md-6 pt-2 pb-2">
       <div class="h-100 p-5 bg-light border rounded-3">
-        <h2>Small App 1</h2>
-        <p>Smaller application</p>
-        <form action="">
-          <input class="btn btn-outline-secondary" type="submit" value="Access" />
-        </form>
-      </div>
-    </div>
-    <div class="col-md-6 pt-2 pb-2">
-      <div class="h-100 p-5 bg-light border rounded-3">
-        <h2>Small App 2</h2>
-        <p>Smaller application</p>
+        <h2>Lucky Draw</h2>
+        <p>Feeling lucky? Enter our draw for a chance to win exciting prizes!</p>
+        <p>Click "Access" to participate.</p>
         <form action="">
           <input class="btn btn-outline-secondary" type="submit" value="Access" />
         </form>
