--- a/main/templates/landingpage.html
+++ b/main/templates/landingpage.html
@@ -51,7 +51,7 @@
       <h1 class="display-5 fw-bold">Durian Obstacle Course</h1>
       <p class="col-md-8 text-justify">Think you can handle the spikes? Navigate tricky paths, dodge perilous durians, and race to the finish line in this thrilling obstacle course!</p>
       <p class="col-md-8 text-justify">Click "Access" to prove your agility!</p>
-      <form action="">
+      <form action="{% url 'obstacle:home' %}">
         <input class="btn btn-primary btn-lg" type="submit" value="Access" />
       </form>
     </div>
