--- a/main/templates/accounts/signup_confirm.html
+++ b/main/templates/accounts/signup_confirm.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-  <div class="row pt-4 px-md-4">
-    <h3>Please check your email inbox or junk folder.</h3>
+  <div class="row col-lg-12 pt-4">
+    {% if messages %}
+      {% for message in messages %}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+          <div class="alert alert-danger" role="alert">{{ message }}</div>
+        {% elif message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+          <div class="alert alert-success" role="alert">{{ message }}</div>
+        {% else %}
+          <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
   </div>
+  <main class="col-md-12 ms-sm-auto col-lg-12 px-md-4 pt-4">
+    <div class="row pt-4 px-md-4">
+      <h3>Please check your email inbox or junk folder.</h3>
+      <p>You will receive an email if there are no errors</p>
+    </div>
+  </main>
 {% endblock %}
