--- a/main/templates/landingpage.html
+++ b/main/templates/landingpage.html
@@ -84,8 +84,11 @@
         <h2>Game Controls</h2>
         <p>Login as a gamemaster for game controls.</p>
         <form action="{% url 'controls:home' %}">
-          <input class="btn btn-outline-secondary" type="submit" value="Login" />
+          <input class="btn btn-outline-secondary" type="submit" value="Controls" />
         </form>
+        <form action="{% url 'accounts:signup' %}">
+          <input class="btn btn-outline-secondary" type="submit" value="Register gamemaster account" />
+        </form>        
       </div>
     </div>
   </div>
