--- a/main/templates/registration/signup.html
+++ b/main/templates/registration/signup.html
@@ -1,5 +1,4 @@
-<!-- templates/registration/signup.html -->
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
   <div class="container-fluid">
@@ -10,7 +9,7 @@
       </main>
     </div>
     <div class="row col-8 pt-4 px-1">
-      <small><i>Already have an account? Login <a href={% url 'login' %}>here</a></i></small>
+      <small><i>Already have an account? Login <a href="{% url 'login' %}">here</a></i></small>
     </div>
   </div>
 {% endblock %}
