--- a/main/templates/registration/login-no-password.html
+++ b/main/templates/registration/login-no-password.html
@@ -21,7 +21,7 @@
       <small>
         <i>
           Trouble?<br />
-          <a href="{% url 'accounts:signup' %}">Register new account</a>
+          <a href="{% url 'accounts:signup_no_password' %}">Register new account (no password required)</a>
           <br />
           <a href="{% url 'password_reset' %}">Forgot password</a>
         </i>
