--- a/main/templates/controls/base.html
+++ b/main/templates/controls/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% url 'landingpage' as url_landing %}
 {% url 'controls:home' as url_home %}
+{% url 'controls:users_list_view' as users_list_view %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -44,6 +45,12 @@
                 <a class="nav-link {% if request.path == url_home %}{% endif %}" href="{{ url_home }}">
                   <span data-feather="home" class="align-text-bottom"></span>
                   Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == users_list_view %}{% endif %}" href="{{ users_list_view }}">
+                  <span data-feather="list" class="align-text-bottom"></span>
+                  UsersList
                 </a>
               </li>
             </ul>
