--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -85,16 +85,16 @@
       </div>
     </main>
     <div class="container pt-4">
-      <footer class="d-flex flex-wrap justify-content-center align-items-center pt-5 border-top">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center text-center pt-5 border-top">
         <p class="text-muted">Developed by {{ INFO_COMPANY_NAME }}</p>
       </footer>
-      <footer class="d-flex flex-wrap justify-content-center align-items-center">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center text-center">
         <p class="text-muted">Brought to you by {{ INFO_COMPANY_COMMITTEE }}</p>
       </footer>
-      <footer class="d-flex flex-wrap justify-content-center align-items-center">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center text-center">
         <p class="text-muted">{{ INFO_COMPANY_DEPARTMENT }} &copy; 2025</p>
       </footer>
-      <footer class="d-flex flex-wrap justify-content-center align-items-center pb-5">
+      <footer class="d-flex flex-wrap justify-content-center align-items-center text-center pb-5">
         <p class="text-muted">
           <i>{{ APP_VERSION }}</i>
         </p>
