clean up and minor bug fixes

--- a/main/templates/registration/signup-nopassword.html
+++ b/main/templates/registration/signup-nopassword.html
@@ -22,7 +22,7 @@
       </main>
     </div>
     <div class="row col-8 pt-4 px-1">
-      <small><i>Already have an account? Login <a href="{% url 'login' %}">here</a></i></small>
+      <small><i>Already have an account? Login <a href="{% url 'accounts:login_no_password' %}">here</a>(no password)</i></small>
     </div>
   </div>
 {% endblock %}
