--- a/main/templates/landingpage.html
+++ b/main/templates/landingpage.html
@@ -40,7 +40,7 @@
       <h1 class="display-5 fw-bold">Bingo Game</h1>
       <p class="col-md-8 text-justify">Get ready to daub! Join the fun and test your luck with our exciting online Bingo game.</p>
       <p class="col-md-8 text-justify">Click "Access" to start playing now!</p>
-      <form action="{% url 'bingo:home' %}">
+      <form action="{% url 'bingo:player' %}">
         <input class="btn btn-primary btn-lg" type="submit" value="Access" />
       </form>
     </div>
