--- a/main/templates/bingo/base.html
+++ b/main/templates/bingo/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% url 'landingpage' as url_landing %}
-{% url 'bingo:home' as url_home %}
+{% url 'bingo:gmview' as url_gmview %}
+{% url 'bingo:settings' as url_settings %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -19,7 +20,7 @@
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
       <a href="{% url 'landingpage' %}"><img src="{% static 'images/logo_bw.png' %}" style="max-height: 55px;" alt="logo" /></a>
       <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Bingo" aria-label="bingo" />
+      <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Obstacle Course" aria-label="obstacle" />
       <div class="navbar-nav">
         <div class="nav-item text-nowrap">
           {% if user.is_authenticated %}
@@ -41,9 +42,17 @@
           <div class="position-sticky pt-3 sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link {% if request.path == url_home %}{% endif %}" href="{{ url_home }}">
+                <a class="nav-link {% if request.path == url_home %}{% endif %}" href="{{ url_gmview }}">
                   <span data-feather="home" class="align-text-bottom"></span>
-                  Home
+                  GameMaster's View
+                </a>
+              </li>
+            </ul>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == url_home %}{% endif %}" href="{{ url_settings }}">
+                  <span data-feather="home" class="align-text-bottom"></span>
+                  Settings
                 </a>
               </li>
             </ul>
