added projector page, numbers drawn, and collapsed accordian still display first 6, started knowldege

--- a/main/templates/bingo/gmview.html
+++ b/main/templates/bingo/gmview.html
@@ -191,6 +191,9 @@
     </div>
     </div>
     <div>
+    <div>
+    <span style="font-size: 32px;">Numbers Drawn: {{num_drawn}}</span>
+    <div>
     <div class="table-container-numbers">  
     <table>
     <thead>
