--- a/main/templates/landingpage.html
+++ b/main/templates/landingpage.html
@@ -43,6 +43,9 @@
       <form action="{% url 'bingo:player' %}">
         <input class="btn btn-primary btn-lg" type="submit" value="Access" />
       </form>
+      <form style="margin-top: 5px" action="{% url 'bingo:winningnumbers' %}">
+        <input class="btn btn-primary btn-lg" type="submit" value="Winning Numbers" />
+      </form>
     </div>
   </div>
 
